<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab04.Activity.AdministradorActivity">

    <ImageView
        android:id="@+id/imageAdmin"
        android:layout_width="199dp"
        android:layout_height="128dp"
        android:contentDescription="@string/nav_header_Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/matricula" />

    <EditText
        android:id="@+id/nombreAddUpdAdmin"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nom_Ad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAdmin" />

    <EditText
        android:id="@+id/cedulaAddUpdAdmin"
        android:layout_width="223dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nom_Ad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreAddUpdAdmin" />


    <EditText
        android:id="@+id/claveAddUpdAdmin"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/clav_ad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedulaAddUpdAdmin" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addUpdAdminBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/check"
        android:tint="@android:color/background_light"
        app:backgroundTint="@color/bg_row_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/claveAddUpdAdmin" />
</android.support.constraint.ConstraintLayout>


